Added server project

--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,8 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+
+# eclipse files
+.classpath
+.project
+.settings
