--- a/caughtup/pom.xml
+++ b/caughtup/pom.xml
@@ -30,17 +30,24 @@
     	<version>1.18.1</version>
     </dependency>
     <dependency>
-    	<groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-jaxrs</artifactId>
-        <version>1.9.13</version>
-    </dependency>
-    <dependency>
-    	<groupId>org.codehaus.jackson</groupId>
-        <artifactId>jackson-xc</artifactId>
-        <version>1.9.13</version>
-    </dependency>
+		<groupId>com.fasterxml.jackson.jaxrs</groupId>
+		<artifactId>jackson-jaxrs-json-provider</artifactId>
+		<version>2.1.1</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>caughtup</finalName>
+    <plugins>
+		<plugin>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-compiler-plugin</artifactId>
+			<version>3.3</version>
+			<configuration>
+				<source>1.7</source>
+				<target>1.7</target>
+				<compilerArgument></compilerArgument>
+			</configuration>
+		</plugin>
+	</plugins>
   </build>
 </project>
