--- a/caughtup/pom.xml
+++ b/caughtup/pom.xml
@@ -48,6 +48,29 @@
 				<compilerArgument></compilerArgument>
 			</configuration>
 		</plugin>
+		<plugin>
+        	<groupId>org.apache.maven.plugins</groupId>
+        	<artifactId>maven-resources-plugin</artifactId>
+        	<version>2.6</version>
+            <executions>
+     			<execution>
+        			<id>copy-resources-2</id>
+        			<phase>validate</phase>
+        			<goals>
+          				<goal>copy-resources</goal>
+        			</goals>
+        			<configuration>
+          				<outputDirectory>${project.build.directory}/conf</outputDirectory>
+          				<resources>
+            				<resource>
+                				<directory>src/main/resources</directory>
+                				<filtering>true</filtering>
+            				</resource>
+          				</resources>
+        			</configuration>
+      			</execution>
+    		</executions>
+      	</plugin>
 	</plugins>
   </build>
 </project>
