--- a/pom.xml
+++ b/pom.xml
@@ -20,19 +20,9 @@
 		<version>3.1.0</version>
 	</dependency>
 	<dependency>
-            <groupId>com.sun.jersey</groupId>
-            <artifactId>jersey-servlet</artifactId>
-            <version>1.18.1</version>
-    </dependency>
-    <dependency>
-    	<groupId>com.sun.jersey</groupId>
-    	<artifactId>jersey-client</artifactId>
-    	<version>1.18.1</version>
-    </dependency>
-    <dependency>
-		<groupId>com.fasterxml.jackson.jaxrs</groupId>
-		<artifactId>jackson-jaxrs-json-provider</artifactId>
-		<version>2.1.1</version>
+		<groupId>com.google.code.gson</groupId>
+		<artifactId>gson</artifactId>
+		<version>2.6.2</version>
 	</dependency>
   </dependencies>
   <build>
