--- a/appspec.yml
+++ b/appspec.yml
@@ -35,7 +35,11 @@ hooks:
   ApplicationStop:
     - location: scripts/stop-server.sh
       timeout: 180
-      runas: ubuntu 
+      runas: ubuntu
+  BeforeInstall:
+    - location: scripts/clear.sh
+      timeout: 180
+      runas: ubuntu
   AfterInstall:
     - location: scripts/compile-server.sh    
       timeout: 360
