--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,16 @@
 		<artifactId>gson</artifactId>
 		<version>2.6.2</version>
 	</dependency>
+	<dependency>
+		<groupId>com.amazonaws</groupId>
+		<artifactId>aws-java-sdk-s3</artifactId>
+		<version>1.10.72</version>
+	</dependency>
+	<dependency>
+		<groupId>org.apache.httpcomponents</groupId>
+		<artifactId>httpclient</artifactId>
+		<version>4.3.4</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>caughtup</finalName>
