--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,11 @@
 		<artifactId>httpclient</artifactId>
 		<version>4.3.4</version>
 	</dependency>
+	<dependency>
+		<groupId>rome</groupId>
+		<artifactId>rome</artifactId>
+		<version>1.0</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>caughtup</finalName>
