--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -8,6 +8,8 @@ updateUserPassword=UPDATE user SET password=? WHERE username=?
 getUsers=SELECT * FROM user
 getUser=SELECT * FROM user WHERE username=?
 deleteUser=DELETE * FROM user WHERE username=?
+getNewsSources=SELECT * FROM news_source
+insertNewsSource=INSERT INTO news_source (resource_id, name, base_url, description, rss_url) VALUES(?, ?, ?, ?, ?)
 
 
 #INSERT INTO optionset (name) VALUES(?)
