--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -6,10 +6,10 @@ insertUser=INSERT INTO user (resource_id, username, password, full_name) VALUES(
 updateUser=UPDATE user SET full_name=?, profile_picture_url=?, age=?, gender=?, location=?, email=?, about_me=? WHERE username=?
 updateUserPassword=UPDATE user SET password=? WHERE username=?
 getUser=SELECT * FROM user WHERE username=?
-deleteUser=DELETE * FROM user WHERE username=?
+deleteUser=DELETE FROM user WHERE username=?
 
 #Article SQLs
 insertArticle=INSERT INTO article (resource_id, title, date, summary, article_url) VALUES(?, ?, ?, ?, ?)
 updateArticle=UPDATE article SET title=?, date=?, summary=?, article_url=? WHERE article_id=?
-getArticle=SELECT article.title, article.date, article.summary, article.article_url FROM article, news_source WHERE news_source.resource_id = article.resource_id and news_source.name = ?
-deleteArticle=DELETE * FROM article WHERE article_id=?
+getArticle=SELECT article.* FROM article, news_source WHERE news_source.resource_id = article.resource_id and news_source.name = ?
+deleteArticle=DELETE FROM article WHERE article_id=?
