--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -9,7 +9,7 @@ getUsers=SELECT * FROM user
 getUser=SELECT * FROM user WHERE username=?
 deleteUser=DELETE * FROM user WHERE username=?
 getNewsSources=SELECT * FROM news_source
-insertNewsSource=INSERT INTO news_source (resource_id, name, base_url, description, rss_url) VALUES(?, ?, ?, ?, ?)
+insertNewsSource=INSERT INTO news_source (resource_id, name, base_url, description, rss_url, latest_article_date) VALUES(?, ?, ?, ?, ?, ?)
 
 
 #INSERT INTO optionset (name) VALUES(?)
