--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -13,3 +13,8 @@ insertArticle=INSERT INTO article (resource_id, title, date, summary, article_ur
 updateArticle=UPDATE article SET title=?, date=?, summary=?, article_url=? WHERE article_id=?
 getArticle=SELECT article.* FROM article, news_source WHERE news_source.resource_id = article.resource_id and news_source.name = ?
 deleteArticle=DELETE FROM article WHERE article_id=?
+
+#follower_following SQLs
+insertFollow=INSERT INTO follower_following (user_id, resource_id) VALUES(?, ?)
+getFollowers=SELECT user.* FROM user, follower_following WHERE user.resource_id = follower_following.user_id and follower_following.resource_id = ?
+deleteFollow=DELETE FROM follower_following WHERE user_id = ? and resource_id = ?
