Added ServletContextListener to automatically run RSS reader thread

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,10 @@
 		<welcome-file>index.jsp</welcome-file>
 	</welcome-file-list>
  
+ 	<listener>
+		<listener-class>news.caughtup.util.CaughtUpServletContextListener</listener-class>
+   	</listener>
+ 
 	<servlet>  
     	<servlet-name>Register</servlet-name>  
     	<servlet-class>news.caughtup.rest.RegisterServlet</servlet-class>  
