Updating latest_article_date when server stops

--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -11,6 +11,7 @@ deleteUser=DELETE FROM user WHERE username=?
 #news_source SQLs
 getNewsSources=SELECT * FROM news_source
 insertNewsSource=INSERT INTO news_source (resource_id, name, base_url, description, rss_url, latest_article_date) VALUES(?, ?, ?, ?, ?, ?)
+updateNewsSource=UPDATE news_source SET name=?, base_url=?, description=?, rss_url=?, latest_article_date=? WHERE resource_id=?
 
 #Article SQLs
 insertArticle=INSERT INTO article (resource_id, title, date, summary, article_url) VALUES(?, ?, ?, ?, ?)
