--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -16,10 +16,12 @@ updateNewsSource=UPDATE news_source SET name=?, base_url=?, description=?, rss_u
 #Article SQLs
 insertArticle=INSERT INTO article (resource_id, title, date, summary, article_url) VALUES(?, ?, ?, ?, ?)
 updateArticle=UPDATE article SET title=?, date=?, summary=?, article_url=? WHERE article_id=?
-getArticle=SELECT article.* FROM article, news_source WHERE news_source.resource_id = article.resource_id and news_source.name = ?
+getArticle=SELECT DISTINCT article.* FROM article, news_source WHERE news_source.resource_id = article.resource_id and news_source.name = ?
 deleteArticle=DELETE FROM article WHERE article_id=?
 
 #follower_following SQLs
 insertFollow=INSERT INTO follower_following (user_id, resource_id) VALUES(?, ?)
-getFollowers=SELECT user.* FROM user, follower_following WHERE user.resource_id = follower_following.user_id and follower_following.resource_id = ?
+getFollowers=SELECT DISTINCT user.* FROM user, follower_following WHERE user.resource_id = follower_following.user_id and follower_following.resource_id = ?
+getUserFollows=SELECT DISTINCT user.* FROM user, follower_following WHERE follower_following.user_id = ? and follower_following.resource_id = user.resource_id
+getNewsSourceFollows=SELECT DISTINCT news_source.* FROM news_source, follower_following WHERE follower_following.user_id = ? and follower_following.resource_id = news_source.resource_id
 deleteFollow=DELETE FROM follower_following WHERE user_id = ? and resource_id = ?
