Added endpoint for changing password

--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -4,7 +4,7 @@ createResource=INSERT INTO resource VALUES()
 #User SQLs
 insertUser=INSERT INTO user (resource_id, username, password, full_name) VALUES(?, ?, ?, ?)
 updateUser=UPDATE user SET full_name=?, profile_picture_url=?, age=?, gender=?, location=?, email=?, about_me=? WHERE username=?
-updateUserPassword=UPDATE user SET password=? WHERE username=?
+updateUserPassword=UPDATE user SET password=? WHERE username=? and password=?
 getUser=SELECT * FROM user WHERE username=?
 deleteUser=DELETE FROM user WHERE username=?
 
