--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -25,3 +25,8 @@ getFollowers=SELECT DISTINCT user.* FROM user, follower_following WHERE user.res
 getUserFollows=SELECT DISTINCT user.* FROM user, follower_following WHERE follower_following.user_id = ? and follower_following.resource_id = user.resource_id
 getNewsSourceFollows=SELECT DISTINCT news_source.* FROM news_source, follower_following WHERE follower_following.user_id = ? and follower_following.resource_id = news_source.resource_id
 deleteFollow=DELETE FROM follower_following WHERE user_id = ? and resource_id = ?
+
+#search SQLs
+searchUsers=SELECT * FROM user WHERE lower(username) LIKE ? OR lower(full_name) LIKE ?
+searchNewsSources=SELECT * FROM news_source WHERE lower(name) LIKE ? OR lower(description) LIKE ?
+searchArticles=SELECT * FROM article WHERE lower(title) LIKE ? OR lower(summary) LIKE ?
