ProfileServlet returns followers of a user

--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -21,7 +21,7 @@ deleteArticle=DELETE FROM article WHERE article_id=?
 
 #follower_following SQLs
 insertFollow=INSERT INTO follower_following (user_id, resource_id) VALUES(?, ?)
-getFollowers=SELECT DISTINCT user.* FROM user, follower_following WHERE user.resource_id = follower_following.user_id and follower_following.resource_id = ?
+getFollowers=SELECT DISTINCT user.* FROM user, follower_following WHERE user.user_id = follower_following.user_id and follower_following.resource_id = ?
 getUserFollows=SELECT DISTINCT user.* FROM user, follower_following WHERE follower_following.user_id = ? and follower_following.resource_id = user.resource_id
 getNewsSourceFollows=SELECT DISTINCT news_source.* FROM news_source, follower_following WHERE follower_following.user_id = ? and follower_following.resource_id = news_source.resource_id
 deleteFollow=DELETE FROM follower_following WHERE user_id = ? and resource_id = ?
