Can add new shared articles

--- a/src/main/resources/SQLQueries.properties
+++ b/src/main/resources/SQLQueries.properties
@@ -34,4 +34,4 @@ searchArticles=SELECT * FROM article WHERE lower(title) LIKE ? OR lower(summary)
 #share SQLs
 shareArticle=INSERT INTO shared_article (user_id, article_id) VALUES(?, ?)
 getSharedArticles=SELECT DISTINCT article.* FROM article, shared_article WHERE article.article_id = shared_article.article_id AND shared_article.user_id = ?
-deleteSharedArticle=DELETE FROM shared_article WHERE user_id = ? and article_id = ?
+deleteSharedArticle=DELETE FROM shared_article WHERE user_id = ? AND article_id = ?
