--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 		<artifactId>rome</artifactId>
 		<version>1.0</version>
 	</dependency>
+	<dependency>
+		<groupId>commons-codec</groupId>
+		<artifactId>commons-codec</artifactId>
+		<version>1.10</version>
+	</dependency>
   </dependencies>
   <build>
     <finalName>caughtup</finalName>
